--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    background: url("/images/rainforest_background.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -13,6 +14,10 @@ body {
     width: 100%;
     font-family: sans-serif;
     font-size: 16px;
+}
+body h1, .p_header {
+    color: white;
+    text-shadow: 3px 3px 5px rgba(0,0,0,.4);
 }
 
 /* HEADER */
@@ -23,14 +28,13 @@ body {
 }
 
 .header-container {
-    width: 80%;
+    width: 100%;
     margin: 0px auto;
     padding: 6em 0 4em;
     display: flex;
     justify-content: space-around;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
     background-size: cover;
-    background-color: rgba(40, 100, 97, .6);
+    background-image: linear-gradient(rgba(40, 100, 97, .9) 50%, transparent);
 }
 
 .header-container h1 {
@@ -55,10 +59,13 @@ body {
     border: none;
     border-radius: 0 0 1em 1em;
     box-shadow: 1px 1px 11px rgba(0, 0, 0, .5);
-    background-color: rgba(40, 100, 97,.5);;
+    background-color: rgba(250,250,250,.4);
+    font-family: 'Cinzel Decorative', cursive;
+    font-weight: bold;
 }
 .header-container li:hover{
     background-color: rgba(40, 100, 97);
+    box-shadow: 1px 1px 10px yellowgreen;
 }
 .header-container a:hover {
     color: white;
@@ -77,7 +84,6 @@ body {
     position: relative;
     padding: 3em 0;
     height: 36em;
-    background-color: rgba(40, 100, 97, .2)
 }
 
 .art-container {
@@ -88,7 +94,7 @@ body {
     border-radius: 1em;
     z-index: 0;
     box-shadow: 3px 3px 6px rgba(40, 100, 97, .6);
-    background-color: rgba(40, 100, 97, .2);
+    background-color: rgba(250,250,250,.5);
 }
 .art-container p {
     border-top: 1px solid black;
@@ -96,6 +102,7 @@ body {
 }
 .art-container h2 {
     letter-spacing: 0.1em;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 .art-species {
@@ -117,19 +124,18 @@ body {
 /* FOOTER */
 
 .footer-container {
-    width: 80%;
+    width: 100%;
     margin: 0px auto;
     position: relative;
-    border-top: 2px solid black;
     padding: 2em 0;
-    background-color: rgba(40, 100, 97, .9)
+    background-image: linear-gradient(to top, rgba(40, 100, 97, .8) 50%, transparent);
 }
 
 .footer-container p {
     position: absolute;
     font-size: 13px;
     top: 5.7em;
-    left: 76em;
+    left: 2em;
     color: white;
 }
 .footer-container .logos-picture {
@@ -141,12 +147,11 @@ body {
 }
 
 /* IMAGES */
-
 .jaguar-draw-one img{
     max-width: 210px;
     position: absolute;
     z-index: 2;
-    margin-left: 29.6em;
+    margin-left: 24.2em;
     margin-top: -18.2em;
 }
 
