--- a/css/links.css
+++ b/css/links.css
@@ -5,7 +5,6 @@
     position: relative;
     padding: 3em 0;
     height: 36em;
-    background-color: rgba(40, 100, 97, .2);
 }
 
 .list_links {
@@ -24,21 +23,23 @@
 .list_links li {
     margin-bottom: 2em;
     border: none;
-    background-color: rgba(151,230,132,.3);
+    background-color: rgba(151,230,132,.5);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, .5);
     border-radius: 1em;
-    padding: 0.8em;
+    padding: 1em 4em;
     text-align: center;
+    font-family: 'Cinzel Decorative', cursive;
+    font-weight: bold;
 }
 .list_links li::before {
     background-image: url("/images/jaguar_jumping-icon.png");
     background-repeat: no-repeat;
-    background-size: 2.5em 2.5em;
+    background-size: 1.7em 1.7em;
     position: absolute;
-    width: 2.5em;
-    height: 2.5em;
+    width: 1.7em;
+    height: 1.7em;
     content:"";
-    left: -3em;
+    left: 1em;
     transform: scaleX(-1);
 }
 .list_links li:hover {
