--- a/css/form.css
+++ b/css/form.css
@@ -4,25 +4,25 @@
     width: 80%;
     margin: 0 auto;
     position: relative;
-    padding: 3em 0;
     height: 36em;
     color: white;
+    padding-bottom: 4em;
 }
 
 .main_field {
     margin: 0 15em;
-    height: 37em;
+    height: 40em;
     border-radius: 1em;
     border: none;
-    background-color: rgba(40, 100, 97,.9);
+    background-color: rgba(40, 100, 97,.4);
 }
 legend {
     display: none;
 }
 input, textarea {
     border: 1px solid green;
-    border-radius: 1em;
-    background-color: rgba(151,230,132,.3);
+    border-radius: 0.5em;
+    background-color: rgba(151,230,132,.5);
     color: white;
 }
 
@@ -37,7 +37,7 @@ input, textarea {
     display: block;
     text-align: left;
     margin-left: 1em;
-    margin-top: 0.7em;
+    margin-top: 1.5em;
     font-family: 'Cinzel Decorative', cursive;
 }
 .user_info input {
@@ -55,10 +55,10 @@ input, textarea {
 .check_field {
     position: relative;
     padding: 0.5em 0.5em 1.4em 0.5em;
-    border-radius: 1em;
+    border-radius: 0.5em;
     box-shadow: 1px 1px 5px rgba(0,0,0,.4);
     border: none;
-    background-color: rgba(151,230,132,.3);
+    background-color: rgba(151,230,132,.5);
     font-family: 'Cinzel Decorative', cursive;
 }
 .check_field p {
@@ -108,7 +108,7 @@ input, textarea {
     padding: 0.7em 2em;
     width: 15%;
     margin-left: 42%;
-    background: transparent;
+    background: rgba(250, 250, 250, .4);
     border: none;
     box-shadow: 2px 2px 10px rgba(0,0,0,.4);
     border-radius: 1em;
