--- a/css/images.css
+++ b/css/images.css
@@ -5,10 +5,10 @@
 .images_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px;
-    padding: 10px;
-    row-gap: 7px;
-    column-gap: 7px;
+    grid-auto-rows: 20em;
+    padding: 1em;
+    row-gap: 0.5em;
+    column-gap: 0.5em;
 }
 
 .item_images {
@@ -28,8 +28,14 @@
     bottom: 0;
     width: 100%;
     color: white;
-    padding: 10px;
+    padding: 0.4em;
     font-size: 13pt;
     font-family: 'Cinzel Decorative', cursive;
     text-align: center;
+    opacity: 0;
+    transition: 0.6s;
+}
+
+.item_images:hover .title_img{
+    opacity: 1;
 }
