--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@
 .art-container p {
     border-top: 1px solid black;
     padding-top: 0.3em;
+    text-align: justify;
 }
 .art-container h2 {
     letter-spacing: 0.1em;
